# top-down-shooter

./: CMakeLists.txt  GameController.cpp  GameController.h  README.md  Utils.h  main.cpp
Model/: AllyOrEnemy.h  AnimationHandler.cpp  AnimationHandler.h  GameObject.cpp  GameObject.h  Handler.h  Level.cpp  Level.h  Magicball.cpp  Magicball.h  OldHandler.h  Room.cpp  Room.h
Model/Auras/: ArisingAura.cpp  ArisingAura.h  Aura.cpp  Aura.h  BurningAura.cpp  BurningAura.h  WarningAura.cpp  WarningAura.h
Model/Characters/: Character.cpp  Character.h  CharacterState.cpp  CharacterState.h  Player.cpp  Player.h
Model/Characters/Behaviors/MovementBehaviors/: MovementBehavior.h  MovementFromPlayer.cpp  MovementFromPlayer.h  MovementTowardsPlayer.cpp  MovementTowardsPlayer.h  PlayerControlledMovement.cpp  PlayerControlledMovement.h  RandomMovement.cpp  RandomMovement.h  RangeHoldingMovement.cpp  RangeHoldingMovement.h
Model/Characters/Enemies/: Enemy.cpp  Enemy.h  Kamikadze.cpp  Kamikadze.h  Necromancer.cpp  Necromancer.h  PistolEnemy.cpp  PistolEnemy.h  Sunstriker.cpp  Sunstriker.h  UpperNecromancer.cpp  UpperNecromancer.h
Model/Effects/: AttackSpeedEffect.cpp  AttackSpeedEffect.h  BurningEffect.cpp  BurningEffect.h  BurningMagicBalls.cpp  BurningMagicBalls.h  Effect.cpp  Effect.h  MoveSpeedEffect.cpp  MoveSpeedEffect.h  TraceLeavingEffect.cpp  TraceLeavingEffect.h  WaterConcentration.cpp  WaterConcentration.h
Model/Interactables/: BerserkPotion.cpp  BerserkPotion.h  FastPotion.cpp  FastPotion.h  GateToNextLevel.cpp  GateToNextLevel.h  HealingSalve.cpp  HealingSalve.h  Interactable.cpp  Interactable.h  ShieldPotion.cpp  ShieldPotion.h
Model/MapObjects/: Level.cpp  Level.h  Room.cpp  Room.h  RoomConnections.cpp  RoomConnections.h  RoomConnector.cpp  RoomConnector.h
Model/MapObjects/StaticObjects/: Wall.cpp  Wall.h
Model/Scenes/: GameMenuScene.cpp  GameMenuScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SkillReplacingScene.cpp  SkillReplacingScene.h  SkillSelectionScene.cpp  SkillSelectionScene.h  WeaponChoosingScene.cpp  WeaponChoosingScene.h
Model/Spells/: ASPDBuff.cpp  ASPDBuff.h  AdvancedAriseSpell.cpp  AdvancedAriseSpell.h  AriseSpell.cpp  AriseSpell.h  BallSpell.cpp  BallSpell.h  BurningBallSpell.cpp  BurningBallSpell.h  MSPDBuff.cpp  MSPDBuff.h  PieceOfHell.cpp  PieceOfHell.h  Spell.cpp  Spell.h  Sunstrike.cpp  Sunstrike.h
Model/UI/: PlayerUI.cpp  PlayerUI.h  UIButton.cpp  UIButton.h  UIComponent.cpp  UIComponent.h  UILabel.cpp  UILabel.h
Model/UI/ButtonCommands/: ButtonCommand.cpp  ButtonCommand.h  ChangeSceneCommand.cpp  ChangeSceneCommand.h  ChoosePlayerWeaponCommand.cpp  ChoosePlayerWeaponCommand.h  QuitCommand.cpp  QuitCommand.h  ReplaceSkillCommand.cpp  ReplaceSkillCommand.h  SetNewActiveSkillCommand.cpp  SetNewActiveSkillCommand.h  SetNewPassiveSkillCommand.cpp  SetNewPassiveSkillCommand.h
Model/Weapons/: Pistol.cpp  Pistol.h  Weapon.cpp  Weapon.h  WeaponType.cpp  WeaponType.h
Systems/: DrawableSystem.h  UpdatableSystem.h
Systems/DrawableSystems/: AuraDrawingSystem.cpp  AuraDrawingSystem.h  ButtonDrawingSystem.cpp  ButtonDrawingSystem.h  CameraMovingSystem.cpp  CameraMovingSystem.h  EnemyDrawingSystem.cpp  EnemyDrawingSystem.h  FieldDrawingSystem.cpp  FieldDrawingSystem.h  InteractableDrawingSystem.cpp  InteractableDrawingSystem.h  LabelDrawingSystem.cpp  LabelDrawingSystem.h  PlayerDrawingSystem.cpp  PlayerDrawingSystem.h  PlayerUIDrawingSystem.cpp  PlayerUIDrawingSystem.h  ProjectileDrawingSystem.cpp  ProjectileDrawingSystem.h  RoomDrawingSystem.cpp  RoomDrawingSystem.h  WeaponDrawingSystem.cpp  WeaponDrawingSystem.h
Systems/UpdatableSystems/: AuraHandlingSystem.cpp  AuraHandlingSystem.h  ButtonHandlingSystem.cpp  ButtonHandlingSystem.h  EffectPuttingSystem.cpp  EffectPuttingSystem.h  EffectRemovingSystem.cpp  EffectRemovingSystem.h  EnemyHandlingSystem.cpp  EnemyHandlingSystem.h  InputHandlingSystem.cpp  InputHandlingSystem.h  InteractableHandlingSystem.cpp  InteractableHandlingSystem.h  LevelHandlingSystem.cpp  LevelHandlingSystem.h  PlayerSkillHandlingSystem.cpp  PlayerSkillHandlingSystem.h  ProjectileHandlingSystem.cpp  ProjectileHandlingSystem.h  RoomHandlingSystem.cpp  RoomHandlingSystem.h  SceneHandlingSystem.cpp  SceneHandlingSystem.h  SkillPointsHandlingSystem.cpp  SkillPointsHandlingSystem.h  SpellHandlingSystem.cpp  SpellHandlingSystem.h  WallsCollisionSystem.cpp  WallsCollisionSystem.h  WeaponHandlingSystem.cpp  WeaponHandlingSystem.h
