cmake_minimum_required(VERSION 3.27)
project(MagicianFest)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(FetchContent)

FetchContent_Declare(
        SFML
        GIT_REPOSITORY  https://github.com/SFML/SFML
        GIT_TAG         2.6.1
)

FetchContent_MakeAvailable(SFML)

add_executable(MagicianFest main.cpp
        GameController.cpp
        GameController.h
        Model/Characters/Player.cpp
        Model/Characters/Player.h
        Systems/UpdatableSystems/InputHandlingSystem.cpp
        Systems/UpdatableSystems/InputHandlingSystem.h
        Systems/DrawableSystems/PlayerDrawingSystem.cpp
        Systems/DrawableSystems/PlayerDrawingSystem.h
        Systems/DrawableSystem.h
        Systems/UpdatableSystem.h
        Systems/DrawableSystems/CameraMovingSystem.cpp
        Systems/DrawableSystems/CameraMovingSystem.h
        Systems/DrawableSystems/FieldDrawingSystem.cpp
        Systems/DrawableSystems/FieldDrawingSystem.h
        Model/Magicball.cpp
        Model/Magicball.h
        Model/GameObject.cpp
        Model/GameObject.h
        Systems/DrawableSystems/ProjectileDrawingSystem.cpp
        Systems/DrawableSystems/ProjectileDrawingSystem.h
        Systems/UpdatableSystems/ProjectileHandlingSystem.cpp
        Systems/UpdatableSystems/ProjectileHandlingSystem.h
        Utils.h
        Model/Characters/Enemies/Enemy.cpp
        Model/Characters/Enemies/Enemy.h
        Systems/DrawableSystems/EnemyDrawingSystem.cpp
        Systems/DrawableSystems/EnemyDrawingSystem.h
        Systems/UpdatableSystems/EnemyHandlingSystem.cpp
        Systems/UpdatableSystems/EnemyHandlingSystem.h
        Model/Weapons/Weapon.cpp
        Model/Weapons/Weapon.h
        Model/Characters/Character.cpp
        Model/Characters/Character.h
        Systems/UpdatableSystems/WeaponHandlingSystem.cpp
        Systems/UpdatableSystems/WeaponHandlingSystem.h
        Systems/DrawableSystems/WeaponDrawingSystem.cpp
        Systems/DrawableSystems/WeaponDrawingSystem.h
        Model/AllyOrEnemy.h
        Model/MapObjects/Room.cpp
        Model/MapObjects/Room.h
        Systems/UpdatableSystems/RoomHandlingSystem.cpp
        Systems/UpdatableSystems/RoomHandlingSystem.h
        Systems/DrawableSystems/RoomDrawingSystem.cpp
        Systems/DrawableSystems/RoomDrawingSystem.h
        Model/Weapons/Pistol.cpp
        Model/Weapons/Pistol.h
        Model/Characters/Enemies/PistolEnemy.cpp
        Model/Characters/Enemies/PistolEnemy.h
        Model/Interactables/Interactable.cpp
        Model/Interactables/Interactable.h
        Systems/UpdatableSystems/InteractableHandlingSystem.cpp
        Systems/UpdatableSystems/InteractableHandlingSystem.h
        Model/Interactables/HealingSalve.cpp
        Model/Interactables/HealingSalve.h
        Systems/DrawableSystems/InteractableDrawingSystem.cpp
        Systems/DrawableSystems/InteractableDrawingSystem.h
        Model/Effects/Effect.cpp
        Model/Effects/Effect.h
        Model/Effects/Effect.h
        Model/Effects/MoveSpeedEffect.cpp
        Model/Effects/MoveSpeedEffect.h
        Systems/UpdatableSystems/EffectPuttingSystem.cpp
        Systems/UpdatableSystems/EffectPuttingSystem.h
        Systems/UpdatableSystems/EffectRemovingSystem.cpp
        Systems/UpdatableSystems/EffectRemovingSystem.h
        Model/Effects/AttackSpeedEffect.cpp
        Model/Effects/AttackSpeedEffect.h
        Model/Interactables/ShieldPotion.cpp
        Model/Interactables/ShieldPotion.h
        Model/MapObjects/Level.h
        Model/MapObjects/Level.cpp
        Model/Characters/CharacterState.cpp
        Model/Characters/CharacterState.h
        Model/Handler.h
        Model/MapObjects/StaticObjects/Wall.cpp
        Model/MapObjects/StaticObjects/Wall.h
        Systems/UpdatableSystems/WallsCollisionSystem.cpp
        Systems/UpdatableSystems/WallsCollisionSystem.h
        Model/MapObjects/RoomConnector.cpp
        Model/MapObjects/RoomConnector.h
        Model/MapObjects/RoomConnections.cpp
        Model/MapObjects/RoomConnections.h
        Model/Characters/Enemies/Kamikadze.cpp
        Model/Characters/Enemies/Kamikadze.h
        Model/Characters/Enemies/Necromancer.cpp
        Model/Characters/Enemies/Necromancer.h
        Model/Characters/Behaviors/MovementBehaviors/MovementTowardsPlayer.cpp
        Model/Characters/Behaviors/MovementBehaviors/MovementTowardsPlayer.h
        Model/Characters/Behaviors/MovementBehaviors/MovementFromPlayer.cpp
        Model/Characters/Behaviors/MovementBehaviors/MovementFromPlayer.h
        Model/Characters/Behaviors/MovementBehaviors/RandomMovement.cpp
        Model/Characters/Behaviors/MovementBehaviors/RandomMovement.h
        Model/Characters/Behaviors/MovementBehaviors/PlayerControlledMovement.cpp
        Model/Characters/Behaviors/MovementBehaviors/PlayerControlledMovement.h
        Model/Auras/Aura.cpp
        Model/Auras/Aura.h
        Model/Auras/BurningAura.cpp
        Model/Auras/BurningAura.h
        Systems/UpdatableSystems/AuraHandlingSystem.cpp
        Systems/UpdatableSystems/AuraHandlingSystem.h
        Systems/DrawableSystems/AuraDrawingSystem.cpp
        Systems/DrawableSystems/AuraDrawingSystem.h
        Model/Characters/Behaviors/MovementBehaviors/MovementBehavior.h
        Model/Spells/Spell.cpp
        Model/Spells/Spell.h
        Model/Spells/BallSpell.cpp
        Model/Spells/BallSpell.h
        Model/Spells/Sunstrike.cpp
        Model/Spells/Sunstrike.h
        Systems/UpdatableSystems/SpellHandlingSystem.cpp
        Systems/UpdatableSystems/SpellHandlingSystem.h
        Model/Characters/Enemies/Sunstriker.cpp
        Model/Characters/Enemies/Sunstriker.h
        Model/Spells/AriseSpell.cpp
        Model/Spells/AriseSpell.h
        Model/UI/UIButton.cpp
        Model/UI/UIButton.h
        Systems/DrawableSystems/ButtonDrawingSystem.cpp
        Systems/DrawableSystems/ButtonDrawingSystem.h
        Systems/UpdatableSystems/ButtonHandlingSystem.cpp
        Systems/UpdatableSystems/ButtonHandlingSystem.h
        Model/UI/ButtonCommands/ButtonCommand.cpp
        Model/UI/ButtonCommands/ButtonCommand.h
        Model/UI/ButtonCommands/QuitCommand.cpp
        Model/UI/ButtonCommands/QuitCommand.h
        Model/Scenes/SceneManager.cpp
        Model/Scenes/SceneManager.h
        Model/Scenes/Scene.cpp
        Model/Scenes/Scene.h
        Model/Scenes/MenuScene.cpp
        Model/Scenes/MenuScene.h
        Model/Scenes/WeaponChoosingScene.cpp
        Model/Scenes/WeaponChoosingScene.h
        Model/UI/ButtonCommands/ChangeSceneCommand.cpp
        Model/UI/ButtonCommands/ChangeSceneCommand.h
        Model/Scenes/GameScene.cpp
        Model/Scenes/GameScene.h
        Systems/DrawableSystems/PlayerUIDrawingSystem.cpp
        Systems/DrawableSystems/PlayerUIDrawingSystem.h
        Model/Auras/WarningAura.cpp
        Model/Auras/WarningAura.h
        Model/Auras/ArisingAura.cpp
        Model/Auras/ArisingAura.h
        Model/Scenes/GameMenuScene.cpp
        Model/Scenes/GameMenuScene.h
        Systems/UpdatableSystems/SceneHandlingSystem.cpp
        Systems/UpdatableSystems/SceneHandlingSystem.h
        Model/Spells/MSPDBuff.cpp
        Model/Spells/MSPDBuff.h
        Model/Characters/Behaviors/MovementBehaviors/RangeHoldingMovement.cpp
        Model/Characters/Behaviors/MovementBehaviors/RangeHoldingMovement.h
        Model/Interactables/GateToNextLevel.cpp
        Model/Interactables/GateToNextLevel.h
        Systems/UpdatableSystems/LevelHandlingSystem.cpp
        Systems/UpdatableSystems/LevelHandlingSystem.h
        Model/Spells/ASPDBuff.cpp
        Model/Spells/ASPDBuff.h
        Model/Scenes/GameOverScene.cpp
        Model/Scenes/GameOverScene.h
        Model/Scenes/SkillSelectionScene.cpp
        Model/Scenes/SkillSelectionScene.h
        Model/UI/UILabel.cpp
        Model/UI/UILabel.h
        Systems/DrawableSystems/LabelDrawingSystem.cpp
        Systems/DrawableSystems/LabelDrawingSystem.h
        Model/UI/ButtonCommands/SetNewPassiveSkillCommand.cpp
        Model/UI/ButtonCommands/SetNewPassiveSkillCommand.h
        Model/UI/ButtonCommands/SetNewActiveSkillCommand.cpp
        Model/UI/ButtonCommands/SetNewActiveSkillCommand.h
        Systems/UpdatableSystems/SkillPointsHandlingSystem.cpp
        Systems/UpdatableSystems/SkillPointsHandlingSystem.h
        Model/Scenes/SkillReplacingScene.cpp
        Model/Scenes/SkillReplacingScene.h
        Model/UI/ButtonCommands/ReplaceSkillCommand.cpp
        Model/UI/ButtonCommands/ReplaceSkillCommand.h
        Systems/UpdatableSystems/PlayerSkillHandlingSystem.cpp
        Systems/UpdatableSystems/PlayerSkillHandlingSystem.h
        Model/Interactables/FastPotion.cpp
        Model/Interactables/FastPotion.h
        Model/Interactables/BerserkPotion.cpp
        Model/Interactables/BerserkPotion.h
        Model/Effects/BurningMagicBalls.cpp
        Model/Effects/BurningMagicBalls.h
        Model/Spells/BurningBallSpell.cpp
        Model/Spells/BurningBallSpell.h
        Model/Effects/BurningEffect.cpp
        Model/Effects/BurningEffect.h
        Model/Weapons/WeaponType.cpp
        Model/Weapons/WeaponType.h
        Model/Effects/WaterConcentration.cpp
        Model/Effects/WaterConcentration.h
        Model/Effects/WaterConcentration.cpp
        Model/Effects/WaterConcentration.h
        Model/Spells/PieceOfHell.cpp
        Model/Spells/PieceOfHell.h
        Model/Effects/TraceLeavingEffect.cpp
        Model/Effects/TraceLeavingEffect.h
        Model/Characters/Enemies/UpperNecromancer.cpp
        Model/Characters/Enemies/UpperNecromancer.h
        Model/Spells/AdvancedAriseSpell.cpp
        Model/Spells/AdvancedAriseSpell.h
        Model/UI/ButtonCommands/ChoosePlayerWeaponCommand.cpp
        Model/UI/ButtonCommands/ChoosePlayerWeaponCommand.h
)

target_link_libraries(MagicianFest sfml-graphics)



